# sketch_bridge

./: README.md  build_windows.bat  build_windows.ps1  pyproject.toml  requirements.txt
sketch_bridge/: __init__.py  __main__.py  app.py  demo.py  transform.py
sketch_bridge/cad/: __init__.py  clients.py  manager.py
sketch_bridge/ui/: __init__.py  cad_status.py  export_dialog.py  main_window.py  preview.py  sketch_list.py  sketch_selection_dialog.py
